--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/Shidqi-Thesis-on-Refactoring/ProductService#readme",
   "dependencies": {
     "async": "^3.2.5",
+    "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.41.3",
     "concurrently": "^8.2.2",
@@ -30,7 +31,7 @@
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
-    "mongoose": "^8.3.4",
+    "mongoose": "^5.13.22",
     "mongoose-paginate": "^5.0.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
